fix: refactor account entity and fix handle partial update for account
